Fix sidebar left pan zone overlapping module

--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,5 @@
 
 .module-switch {
   padding: 0.5em;
+  position: relative;
 }
